# sparrowhawk

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
data/: festival-2.4_sparrowhawk.patch
documentation/: README.md
documentation/grammars/: sentence_boundary_exceptions.txt  sparrowhawk_configuration.ascii_proto  sparrowhawk_configuration_serialization.ascii_proto  test.txt  tokenizer.ascii_proto  verbalizer.ascii_proto  verbalizer_serialization.ascii_proto  verbalizer_serialization_spec.ascii_proto
documentation/grammars/en_toy/: README  byte.far  byte.grm  util.far  util.grm
documentation/grammars/en_toy/classify/: cardinal.grm  date.grm  measure.grm  measure.tsv  money.grm  money.tsv  months.tsv  punctuation.grm  time.grm  tokenize_and_classify.grm  word.grm
documentation/grammars/en_toy/verbalize/: ORDINAL_NUMBER_NAME  date.grm  measure.grm  money.grm  money.tsv  numbers.grm  time.grm  verbalize.grm  verbatim.grm
documentation/grammars/en_toy/verbalize_serialization/: date.grm  measure.grm  money.grm  numbers.grm  time.grm  verbalize.grm  verbatim.grm
src/: Makefile.am  Makefile.in
src/include/: Makefile.am  Makefile.in
src/include/sparrowhawk/: field_path.h  io_utils.h  items.pb.h  links.pb.h  logger.h  normalizer.h  numbers.h  protobuf_parser.h  protobuf_serializer.h  record_serializer.h  regexp.h  rule_order.pb.h  rule_system.h  semiotic_classes.pb.h  sentence_boundary.h  sparrowhawk_configuration.pb.h  spec_serializer.h  string_utils.h  style_serializer.h
src/lib/: Makefile.am  Makefile.in  field_path.cc  io_utils.cc  items.pb.cc  links.pb.cc  normalizer.cc  normalizer_utils.cc  numbers.cc  protobuf_parser.cc  protobuf_serializer.cc  record_serializer.cc  regexp.cc  rule_order.pb.cc  rule_system.cc  semiotic_classes.pb.cc  sentence_boundary.cc  serialization_spec.pb.cc  sparrowhawk_configuration.pb.cc  spec_serializer.cc  string_utils.cc  style_serializer.cc
src/proto/: Makefile.am  Makefile.in  items.proto  links.proto  rule_order.proto  semiotic_classes.proto  serialization_spec.proto  sparrowhawk_configuration.proto
